--- a/app/src/main/res/layout/activity_make_order.xml
+++ b/app/src/main/res/layout/activity_make_order.xml
@@ -51,7 +51,7 @@
                     android:id="@+id/img_feed"
                     android:layout_width="@dimen/_100sdp"
                     android:layout_height="@dimen/_70sdp"
-                    android:src="@drawable/thankyou"
+                    android:src="@drawable/baby2"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -100,7 +100,7 @@
                     android:layout_marginStart="@dimen/_8sdp"
                     android:layout_marginEnd="@dimen/_8sdp"
                     android:layout_marginTop="@dimen/_2sdp"
-                    android:text="Seeing forward to seeing you again"
+                    android:text="Experienced babysitter"
                     tools:ignore="missingConstraints"
                     app:layout_constraintStart_toEndOf="@id/img_feed"
                     app:layout_constraintTop_toBottomOf="@id/thks"
@@ -136,7 +136,7 @@
                     android:id="@+id/img_plumber"
                     android:layout_width="@dimen/_100sdp"
                     android:layout_height="@dimen/_70sdp"
-                    android:src="@drawable/thankyou"
+                    android:src="@drawable/plumber"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -185,7 +185,7 @@
                     android:layout_marginStart="@dimen/_8sdp"
                     android:layout_marginEnd="@dimen/_8sdp"
                     android:layout_marginTop="@dimen/_2sdp"
-                    android:text="Seeing forward to seeing you again"
+                    android:text="Professional plumber"
                     tools:ignore="missingConstraints"
                     app:layout_constraintStart_toEndOf="@id/img_plumber"
                     app:layout_constraintTop_toBottomOf="@id/titleCategory"
@@ -221,7 +221,7 @@
                     android:id="@+id/img_electrician"
                     android:layout_width="@dimen/_100sdp"
                     android:layout_height="@dimen/_70sdp"
-                    android:src="@drawable/thankyou"
+                    android:src="@drawable/electrician"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -270,7 +270,7 @@
                     android:layout_marginStart="@dimen/_8sdp"
                     android:layout_marginEnd="@dimen/_8sdp"
                     android:layout_marginTop="@dimen/_2sdp"
-                    android:text="Seeing forward to seeing you again"
+                    android:text="Professional electrician"
                     tools:ignore="missingConstraints"
                     app:layout_constraintStart_toEndOf="@id/img_electrician"
                     app:layout_constraintTop_toBottomOf="@id/titleCategory3"
