--- a/app/src/main/res/layout/bottom_sheet_add.xml
+++ b/app/src/main/res/layout/bottom_sheet_add.xml
@@ -69,6 +69,24 @@
             />
     </soup.neumorphism.NeumorphCardView>
 
+    <soup.neumorphism.NeumorphCardView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="15dp"
+        app:neumorph_shapeType="pressed">
+        <EditText
+            android:id="@+id/workerSpeciality"
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:background="@drawable/edit_text_creadential"
+            android:hint="Speciality"
+            android:paddingLeft="30dp"
+            android:inputType="text"
+            />
+    </soup.neumorphism.NeumorphCardView>
+
 
     <soup.neumorphism.NeumorphButton
         android:id="@+id/add_btn"
