--- a/app/src/main/res/layout/fragment_admin_home.xml
+++ b/app/src/main/res/layout/fragment_admin_home.xml
@@ -100,9 +100,9 @@
                     android:orientation="vertical"
                     android:padding="15dp">
                     <androidx.appcompat.widget.AppCompatImageView
-                        android:layout_width="36dp"
-                        android:layout_height="36dp"
-                        android:src="@drawable/ic_account_circle_24"/>
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:src="@drawable/ic_undraw_shopping"/>
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -133,9 +133,9 @@
                     android:orientation="vertical"
                     android:padding="15dp">
                     <androidx.appcompat.widget.AppCompatImageView
-                        android:layout_width="36dp"
-                        android:layout_height="36dp"
-                        android:src="@drawable/ic_notifications_24"/>
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:src="@drawable/ic_undraw_access_denied"/>
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -166,9 +166,9 @@
                     android:orientation="vertical"
                     android:padding="15dp">
                     <androidx.appcompat.widget.AppCompatImageView
-                        android:layout_width="36dp"
-                        android:layout_height="36dp"
-                        android:src="@drawable/ic_home_24"/>
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:src="@drawable/ic_undraw_remotely"/>
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -199,9 +199,9 @@
                     android:orientation="vertical"
                     android:padding="15dp">
                     <androidx.appcompat.widget.AppCompatImageView
-                        android:layout_width="36dp"
-                        android:layout_height="36dp"
-                        android:src="@drawable/ic_format_list_bulleted_24"/>
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:src="@drawable/ic_undraw_clients"/>
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -243,15 +243,15 @@
 
 
 
-                    <com.makeramen.roundedimageview.RoundedImageView
-                        android:id="@+id/img_feed"
-                        android:layout_width="@dimen/_100sdp"
-                        android:layout_height="@dimen/_70sdp"
-                        android:src="@drawable/thankyou"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:riv_corner_radius="@dimen/_8sdp"/>
+<!--                    <androidx.appcompat.widget.AppCompatImageView-->
+<!--                        android:id="@+id/img_feed"-->
+<!--                        android:layout_width="@dimen/_100sdp"-->
+<!--                        android:layout_height="@dimen/_70sdp"-->
+<!--                        android:src="@drawable/thankyou"-->
+<!--                        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--                        app:layout_constraintStart_toStartOf="parent"-->
+<!--                        app:layout_constraintTop_toTopOf="parent"-->
+<!--                        app:riv_corner_radius="@dimen/_8sdp"/>-->
 
                     <soup.neumorphism.NeumorphCardView
                         android:id="@+id/cardRight"
@@ -270,12 +270,13 @@
                             android:src="@drawable/ic_baseline_arrow_forward_ios_24"/>
 
                     </soup.neumorphism.NeumorphCardView>
+
                     <androidx.constraintlayout.widget.Guideline
                         android:id="@+id/guideline"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
-                        app:layout_constraintGuide_percent="0.5"/>
+                        app:layout_constraintGuide_begin="48dp" />
     
                     <TextView
                         android:id="@+id/thks"
@@ -302,6 +303,7 @@
                         app:layout_constraintEnd_toStartOf="@id/cardRight"
                         app:layout_constraintStart_toEndOf="@id/img_feed"
                         app:layout_constraintTop_toBottomOf="@id/thks"
+                        tools:ingore="missingConstraints"
                         android:textSize="@dimen/_13sdp"
                         />
 
