--- a/app/src/main/res/layout/item_clients.xml
+++ b/app/src/main/res/layout/item_clients.xml
@@ -36,7 +36,7 @@
                 android:layout_marginTop="@dimen/_5sdp"
                 />
             <soup.neumorphism.NeumorphCardView
-                android:id="@+id/callPhone"
+                android:id="@+id/callPhoneViewClient"
                 android:layout_width="@dimen/_48sdp"
                 android:layout_height="@dimen/_48sdp"
                 app:layout_constraintBottom_toBottomOf="parent"
