--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,10 +11,23 @@
         android:layout_height="match_parent">
 
     <RelativeLayout
+        android:layout_marginTop="@dimen/_10sdp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/_20sdp">
 
-    <LinearLayout
+        <ImageView
+
+            android:layout_width="@dimen/_200sdp"
+            android:layout_height="@dimen/_150sdp"
+            android:src="@drawable/ic_undraw_authentication"
+            android:layout_marginStart="@dimen/_50sdp"
+            android:layout_marginEnd="@dimen/_50sdp"
+
+            />
+
+
+        <LinearLayout
         android:layout_marginTop="180dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
