--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -25,7 +25,7 @@
             android:src="@drawable/ic_account_circle_24"
             />
         <TextView
-            android:id="@+id/name"
+            android:id="@+id/c_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Name"
@@ -41,8 +41,8 @@
             android:id="@+id/editBtn"
             android:layout_width="@dimen/_30sdp"
             android:layout_height="@dimen/_30sdp"
-            app:layout_constraintStart_toEndOf="@+id/name"
-            app:layout_constraintTop_toTopOf="@+id/name"
+            app:layout_constraintStart_toEndOf="@+id/c_name"
+            app:layout_constraintTop_toTopOf="@+id/c_name"
             android:layout_marginLeft="@dimen/_15sdp"
             android:src="@drawable/ic_baseline_edit_24"
 
@@ -51,12 +51,12 @@
 
 
         <TextView
-            android:id="@+id/phone"
+            android:id="@+id/c_phone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Phone number"
             android:textSize="@dimen/_20sdp"
-            app:layout_constraintTop_toBottomOf="@id/name"
+            app:layout_constraintTop_toBottomOf="@id/c_name"
             android:textColor="@color/browser_actions_bg_grey"
             android:gravity="center"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
